feat: /adm with success response and requestBody
