# src/swagger.json
@@ -272,6 +272,55 @@
           }
         }
       }
+    },
+    "/adm": {
+      "post": {
+        "summary": "Criação de usuários com privilégios de administrador",
+        "description": "Esta é uma rota de destinada à criação de usuários com privilégios de administrador.",
+        "tags": ["Adm"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": "string",
+                  "email": "string",
+                  "id": "string",
+                  "avatar_img": "string"
+                },
+                "examples": {
+                  "user": {
+                    "value": {
+                      "name": "henrique",
+                      "email": "henrique@vibes.com",
+                      "password": "senhaForte1234",
+                      "admHash": "69faaa2bffab03d3e80e08ac1181526a",
+                      "avatar_img": "Imagem do luffy"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "responses": {
+            "201": {
+              "description": "Created",
+              "content": {
+                "application/json": {
+                  "example": {
+                    "name": "henrique",
+                    "email": "henrique@vibes.com",
+                    "id": "7ba51f56-b786-490a-9e3a-8df8cf565a03",
+                    "avatar_img": "https://www.lance.com.br/files/article_main/uploads/2022/04/29/626c07807ccfa.jpeg"
+                  }
+                }
+              }
+            }
+            
+          }
+        }
+      }
     }
   },
 
